--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
-<% provide(:pagetitle, "About") %>
+<% provide(:pagetitle, "About Us") %>
 <h1>About</h1>
 <p>
   Get help on the Ruby on Rails Tutorial at the
